# Analyzer

./: .dockerignore  .gitignore  Cargo.toml  README.md  auto_invest_notes.md
docker/: analyzer.dockerfile  docker-compose.yml  nlp.dockerfile
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: analysis.rs  command.rs  cors.rs  email.rs  entity.rs  investigation.rs  job.rs  main.rs  pipeline.rs  splunk.rs  state.rs
src/analysis/: auth_checker.rs  email_behavior_checker.rs  entity_checker.rs  link_checker.rs  mock_analyzer.rs  nlp_checker.rs  snow_personna_checker.rs
src/investigation/: google_search.rs  wikidata.rs
src/investigation/wikidata/: data.rs  data_request.rs
src/splunk/: job.rs  web_client.rs
workers/language_processing/: .gitignore  environment.yml  llm.py  main.py  ner.py  ocr.py  tests-fr.txt  tests.txt
