[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
clap = { version = "4.5.18", features = ["derive"] }
mail-parser = "0.9.4"
rand = "0.8.5"
rand_derive = "0.5.0"
log = "0.4.22"
tokio = {version = "1.40.0", features = ["rt-multi-thread"]}
serde_bytes = "0.11.15"
serde = { version = "1.0.210", features = ["derive"] }
tokio-stream = "0.1.16"
async-trait = "0.1.83"
rocket_cors = "0.6.0"