[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
clap = { version = "4.5.18", features = ["derive"] }
mail-parser = "0.9.4"
rand = "0.8.5"
rand_derive = "0.5.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
serde_bytes = "0.11.15"
serde = { version = "1.0.210", features = ["derive"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
async-trait = "0.1.83"
rocket_cors = "0.6.0"
reqwest = { features = ["json", "multipart", "stream", "cookies"], version = "0.12.8" }
regex = "1.11.0"
url = "2.5.2"
base64 = "0.22.1"
async-recursion = "1.1.1"
urlencoding = "2.1.3"
mail-auth = "0.5.0"
psl = "2.1.55"
tl = "0.7.8"
snailquote = "0.3.1"
lazy_static = "1.5.0"
thirtyfour = { version = "0.34.0", features = ["native-tls", "component"] }
chrono = "0.4.38"
enum-assoc = "1.2.4"
serde_json = "1.0.135"
