[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]

backend = { path = ".." }

tl = "0.7.8"
mail-parser = "0.9.4"
regex = "1.11.1"
snailquote = "0.3.1"
lazy_static = "1.5.0"
url = "2.5.2"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
thirtyfour = { version = "0.34.0", features = ["native-tls", "component"] }
reqwest = { version = "0.12.8", features = ["cookies"] }